; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-vdsl-fw/src/extr_w921v_fw_cutter.c_part_type.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-vdsl-fw/src/extr_w921v_fw_cutter.c_part_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"/tmp/vr9_dsl_fw_annex_b.bin\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"/tmp/vr9_tapi_fw.bin\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"\09Unknown lzma type 0x%02X\0A\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"/tmp/unknown.lzma\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @part_type(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %7 [
    i32 129, label %5
    i32 128, label %6
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %10

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i32 %8)
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %10

10:                                               ; preds = %7, %6, %5
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
